--- a/service/http/DockerFile
+++ b/service/http/DockerFile
@@ -28,6 +28,6 @@ ENV TZ Asia/Shanghai
 
 WORKDIR /app
 COPY --from=builder /app/app /app/app
-
+COPY --from=builder /app/etc /app/etc
 
 CMD ["./app", "-f", "etc/app.yaml"]
