--- a/service/user/DockerFile
+++ b/service/user/DockerFile
@@ -26,6 +26,6 @@ ENV TZ Asia/Shanghai
 
 WORKDIR /app
 COPY --from=builder /app/user /app/user
-
+COPY --from=builder /app/etc /app/etc
 
 CMD ["./user", "-f", "etc/user.yaml"]
